@@ -12,6 +12,7 @@
 	* configure configure.in include/sane/config.h.in
 	  sanei/sanei_usb.c: Added support for usb functionality on OS/2
 	  using the usbcalls interface (patch from Paul Smedley
-	  <paul@smedley.info>). 
+	  <paul@smedley.info>).
+	* sanei/sanei_usb.c: Fixed some compilation warnings.
 
 Older entries can be found in ChangeLog-1.0.16.
